# dfd

./: .gitignore  README.md
common/: README.md  index.md
common/include/: calc_silog_error.h  create_blur.h  dfd_array_cropper.h  dfd_cropper.h  dfd_cyclic_analysis.h  dfd_dnn_input.h  dfd_net_l2_v01.h  dfd_net_lin_v01.h  dfd_net_rw_v17.h  dfd_net_rw_v18.h  dfd_net_rw_v19.h  dfd_net_v14.h  dfd_net_v15a.h  dfd_net_v15b.h  dfd_net_v16.h  dfd_net_v16a.h  dfd_net_v16b.h  dfd_net_v21.h  dfd_net_v22.h  dfd_net_v23.h  dfd_net_v24.h  dfd_net_v25.h  dfd_net_v26.h  dfd_net_v27.h  dfd_net_v28.h  dfd_unet_v1.h  eval_dfd_net_performance.h  gcc_sucks.h  load_dfd_data.h  vect2matrix.h
common/include/pso/: dfd_net_v14_pso_01.h  dfd_net_v14_pso_02.h  dfd_net_v14_pso_03.h  dfd_net_v14_pso_04.h  dfd_net_v14_pso_05.h  dfd_net_v14_pso_06.h  dfd_net_v14_pso_07.h  dfd_net_v14_pso_08.h  dfd_net_v14_pso_09.h  dfd_net_v14_pso_10.h  dfd_net_v14_pso_11.h  dfd_net_v14_pso_12.h  dfd_net_v14_pso_13.h  dfd_net_v14_pso_14.h  dfd_net_v14_pso_15.h  dfd_net_v14_pso_16.h  dfd_net_v14_pso_17.h  dfd_net_v14_pso_18.h  dfd_net_v14_pso_19.h  dfd_net_v14_pso_20.h
common/inputs/mb/: dfd_input_beast.txt  dfd_input_d.txt  dfd_input_laptop.txt  dfd_input_linux.txt  dfd_input_ws.txt  dfd_mb_data_all_sm2.txt  dfd_test_data_one2.txt  dfd_test_data_sm2.txt  dfd_test_data_sm_v3.txt  dfd_test_data_sm_v4.txt  dfd_train_data_one2.txt  dfd_train_data_sm2.txt  dfd_train_data_sm_v3.txt  dfd_train_data_sm_v4.txt
common/inputs/rw4/: dfd_6x_left_141_129_input.txt  dfd_6x_left_141_129_v3_input.txt  dfd_rw4_135_all_left_6x.txt  dfd_rw4_135_all_left_6xd2.txt  dfd_rw4_135_all_left_6xd5.txt  dfd_rw4_135_all_left_6xd6.txt  dfd_rw4_135_all_left_6xe4.txt
common/inputs/rw4/6x/: dfd_rw4_141_129_test_left_6x.txt  dfd_rw4_141_129_test_left_6xd2.txt  dfd_rw4_141_129_test_left_6xe4.txt  dfd_rw4_141_129_train_left_6x.txt  dfd_rw4_141_129_train_left_6xd2.txt  dfd_rw4_141_129_train_left_6xe4.txt  dfd_rw4_141_129_v3_test_left_6x.txt  dfd_rw4_141_129_v3_test_left_6xd2.txt  dfd_rw4_141_129_v3_test_left_6xd5.txt  dfd_rw4_141_129_v3_test_left_6xd6.txt  dfd_rw4_141_129_v3_test_left_6xe4.txt  dfd_rw4_141_129_v3_train_left_6x.txt  dfd_rw4_141_129_v3_train_left_6xd2.txt  dfd_rw4_141_129_v3_train_left_6xd5.txt  dfd_rw4_141_129_v3_train_left_6xd6.txt  dfd_rw4_141_129_v3_train_left_6xe4.txt
common/lens_data/: lens_step_data_1m_v2.txt  lens_step_data_1m_v3.txt
common/matlab/: rgb_volume.m
common/matlab/blur_calculator/: BlurCalculator.fig  BlurCalculator.m  CoC_map.m  blurCalc.m  blur_calculator.mlapp  blur_radius_comp.m  calc_blur_radius.m  display_blur_difference.m  generate_coc_map.m  get_coc.m  simple_blur_radius.m  test_blur_results.m
common/matlab/blur_functions/: blur_example.m  gen_rand_image.m  gen_rand_image_all.m  gen_rand_image_depthmap.m  generate_rand_color_image.m  generate_rand_color_image2.m  generate_rand_color_image3.m  generate_rand_color_image_v4.m  generate_rand_depthmap_test_v1.m  generate_test_depthmap.m  print_half_kernel.m  test_blur.m
common/matlab/data_processing/: analyze_lens_vs_temp.m  apply_blur_correction.m  batch_crop_images.m  batch_scale_images.m  compare_dataset_histograms.m  compare_lens_vs_theory.m  correct_blur_image.m  create_input_file_list.m  create_input_files.m  create_input_listing.m  data_histogram_gui.mlapp  data_processing_gui.mlapp  depthmap_viewer_gui.mlapp  find_compatible_blur.m  get_all_sharpest_image.m  get_img_var.m  get_sharpest_image.m  get_sum_fft.m  invert_lidar_data.m  plot_nrz_lens_data.m  process_blur_correction.m  process_data.m  process_single_data.m  process_unity_data.m  run_data_processor.m  scale_lidar_data.m  scan_dfd_dnn_rw_analysis_logs.m
common/matlab/graph_cuts_utils/: generate_gc_inputs.m
common/matlab/lidar_utils/: data_processing.m  format_os1_angles.m  process_all_lidar_data.m  process_lidar_data.m  process_single_lidar_data.m  read_binary_lidar_data.m  read_ros_bag.m
common/matlab/pso_code/: analyze_dfd_pso_convergence.m  build_dfd_net_rw.m  build_dfd_net_rw_v3.m  build_dlib_net.m  dfd_pso_master.m  mnist_pso_master.m  plot_pso_dfd_conv.m  process_pso_results.m  update_population.m  update_velocity.m  validate_pso_member.m  validate_pso_velocity.m
common/matlab/utils/: analyze_blur_differences.m  analyze_dfd_trials.m  analyze_k_fold_trials.m  analyze_lens_step.mlapp  analyze_patch_size_trials.m  analyze_repeat_trials.m  compare_dnn_logfiles.m  compare_dnn_map_to_groundtruth.m  compare_dnn_map_to_groundtruth_v2.m  compare_gc_dnn_results.m  depth_overlay.m  get_depthmap_errors.m  get_dfd_results.m  plot_dnn_training_patches.m  read_binary_cropper_stats.m  read_binary_depthmap_file.m  read_dfd_gc_log_multi.m  read_dfd_gc_log_section.m  read_dfd_gc_log_single.m  read_dfd_images.m  read_dnn_logfile.m  scale_depth_map.m  scan_dfd_dnn_analisys_logs.m  scan_dfd_dnn_logs.m  scan_dfd_gc_logs.m  scan_dfd_gc_multi_log.m  sigma_blur_check.m  sigma_comparisons.m  tile_images.m
common/python/: README.md
common/python/blur_calculator/: blur_calculator.html  blur_calculator.py  coc_calc.py
common/python/depth_test/: depth_test.html  depth_test.py
common/scripts/: Blur_Actions.atn  blur_script_main.jsx  blur_support_functions.jsx  data_listing.jsx  data_listing2.jsx
dfd_dnn_analysis/: CMakeLists.txt  README.md  dfd_dnn_input.txt  dfd_dnn_input_linux.txt
dfd_dnn_analysis/include/: dfd_dnn_analysis.h
dfd_dnn_analysis/src/: dfd_rw_analysis_v1.cpp
dfd_dnn_cam/: CMakeLists.txt  README.md  dnn_cam_input.txt
dfd_dnn_cam/include/: dfd_dnn_cam.h
dfd_dnn_cam/src/: dfd_dnn_cam_main_v1.cpp
dfd_dnn_lib/: CMakeLists.txt
dfd_dnn_lib/include/: dfd_dnn_lib.h
dfd_dnn_lib/src/: dfd_dnn_lib.cpp
dfd_dnn_lib_analysis/: CMakeLists.txt  dfd_dnn_input.txt  dfd_dnn_input_linux.txt
dfd_dnn_lib_analysis/include/: dfd_dnn_analysis.h
dfd_dnn_lib_analysis/src/: dfd_dnn_lib_analysis.cpp
dfd_dnn_trainer/: CMakeLists.txt  README.md
dfd_dnn_trainer/include/: dfd_dnn.h
dfd_dnn_trainer/src/: dfd_dnn_main_v2.cpp
dfd_graphcuts/: CMakeLists.txt  README.md
